--- a/lumi/index.html
+++ b/lumi/index.html
@@ -89,7 +89,6 @@
       border: 1px solid rgba(0,0,0,0.06);
       background: #fafafa;
       cursor: pointer;
-      font-size: 15px;
     }
 
     .radio-label input {
@@ -107,7 +106,6 @@
     .star-btn {
       padding: 10px 12px;
       border: 2px solid rgba(0,0,0,0.12);
-      background: #fff;
       border-radius: 12px;
       cursor: pointer;
       font-size: 20px;
@@ -143,16 +141,6 @@
       margin-top: 8px;
       display: none;
     }
-
-    @media (max-width: 520px){
-      .survey-container{
-        margin: 14px;
-        padding: 18px;
-      }
-      .star-btn{
-        flex: 1 1 calc(50% - 10px);
-      }
-    }
   </style>
 </head>
 
@@ -176,6 +164,7 @@
           <label class="radio-label"><input type="radio" name="ease" value="Neutral"> Neutral</label>
           <label class="radio-label"><input type="radio" name="ease" value="Difficult"> Difficult</label>
         </div>
+        <div class="error-message" id="easeError">Please select an option</div>
       </div>
 
       <div class="question">
@@ -188,6 +177,7 @@
           <label class="radio-label"><input type="radio" name="decision" value="Social media"> Social media</label>
           <label class="radio-label"><input type="radio" name="decision" value="Other"> Other</label>
         </div>
+        <div class="error-message" id="decisionError">Please select an option</div>
       </div>
 
       <div class="question">
@@ -199,6 +189,7 @@
           <label class="radio-label"><input type="radio" name="improve" value="Communication / emails"> Communication / emails</label>
           <label class="radio-label"><input type="radio" name="improve" value="Nothing — everything was good"> Nothing — everything was good</label>
         </div>
+        <div class="error-message" id="improveError">Please select an option</div>
       </div>
 
       <div class="question">
@@ -210,7 +201,8 @@
           <button type="button" class="star-btn" data-stars="2">⭐⭐</button>
           <button type="button" class="star-btn" data-stars="1">⭐</button>
         </div>
-        <input type="hidden" name="stars" id="starsInput" required>
+        <input type="hidden" id="starsInput" required>
+        <div class="error-message" id="starsError">Please select a rating</div>
       </div>
 
       <button type="submit" class="submit-btn">Submit</button>
@@ -218,47 +210,46 @@
   </div>
 
   <script>
-    (function() {
+    (function(){
       const form = document.getElementById('surveyForm');
       const starsGroup = document.getElementById('starsGroup');
       const starsInput = document.getElementById('starsInput');
-      const submitBtn = form.querySelector('.submit-btn');
 
       starsGroup.addEventListener('click', e => {
         const btn = e.target.closest('.star-btn');
-        if (!btn) return;
-        starsGroup.querySelectorAll('.star-btn').forEach(b => b.classList.remove('selected'));
+        if(!btn) return;
+        document.querySelectorAll('.star-btn').forEach(b => b.classList.remove('selected'));
         btn.classList.add('selected');
         starsInput.value = btn.dataset.stars;
+        document.getElementById('starsError').style.display = 'none';
       });
 
       form.addEventListener('submit', async e => {
         e.preventDefault();
-
-        const stars = parseInt(starsInput.value, 10);
-        if (stars >= 3) {
-          window.open('https://www.trustpilot.com/evaluate/luminoir.nl', '_blank');
+        const stars = starsInput.value;
+        if(!stars){
+          document.getElementById('starsError').style.display = 'block';
+          return;
         }
 
-        const webhookUrl =
-          'https://discord.com/api/webhooks/1462787037856927867/0iAe-SfYNah0yYOA0mTvI0pw9QRNg8omvNLRF6PbbuNPjYUcz3BT5jkc-oQV4VRUmpGO';
+        if(parseInt(stars,10) >= 3){
+          window.open('https://www.trustpilot.com/evaluate/luminoir.nl','_blank');
+        }
 
         const payload = {
-          embeds: [{
-            title: '📋 New Survey Response - Luminoir',
-            color: 3066993,
-            timestamp: new Date().toISOString()
+          embeds:[{
+            title:'📋 New Survey Response - Luminoir',
+            color:3066993,
+            timestamp:new Date().toISOString()
           }]
         };
 
-        try {
-          navigator.sendBeacon(
-            webhookUrl,
-            new Blob([JSON.stringify(payload)], { type: 'application/json' })
-          );
-        } catch {}
+        navigator.sendBeacon(
+          'https://discord.com/api/webhooks/1462787037856927867/0iAe-SfYNah0yYOA0mTvI0pw9QRNg8omvNLRF6PbbuNPjYUcz3BT5jkc-oQV4VRUmpGO',
+          new Blob([JSON.stringify(payload)],{type:'application/json'})
+        );
 
-        window.location.href = 'thankyou.html';
+        setTimeout(()=>location.href='thankyou.html',300);
       });
     })();
   </script>
