--- a/lumi/index.html
+++ b/lumi/index.html
@@ -381,44 +381,53 @@
         }
 
         // Send to Discord (Luminoir webhook)
-        const webhookUrl = 'https://discord.com/api/webhooks/1462787037856927867/0iAe-SfYNah0yYOA0mTvI0pw9QRNg8omvNLRF6PbbuNPjYUcz3BT5jkc-oQV4VRUmpGO';
+// Send to Discord (reliable on redirect + full embed)
+const webhookUrl = 'YOUR_WEBHOOK_HERE';
 
-        const discordPayload = {
-          embeds: [{
-            title: '📋 New Survey Response - Luminoir',
-            color: 3066993,
-            fields: [
-              { name: 'Q1. Name', value: name, inline: false },
-              { name: 'Q2. Order Ease', value: easeValue, inline: true },
-              { name: 'Q5. Rating', value: '⭐'.repeat(starRating) + ` (${starRating} stars)`, inline: true },
-              { name: 'Q3. Decision Factor', value: decisionValue, inline: false },
-              { name: 'Q4. Improvement', value: improveValue, inline: false }
-            ],
-            timestamp: new Date().toISOString()
-          }]
-        };
+const discordPayload = {
+  content: "New survey response received ✅",
+  embeds: [{
+    title: '📋 New Survey Response - Luminoir',
+    color: 3066993,
+    fields: [
+      { name: 'Q1. Name', value: name || '-', inline: false },
+      { name: 'Q2. Order Ease', value: easeValue || '-', inline: true },
+      { name: 'Q5. Rating', value: '⭐'.repeat(starRating) + ` (${starRating} stars)`, inline: true },
+      { name: 'Q3. Decision Factor', value: decisionValue || '-', inline: false },
+      { name: 'Q4. Improvement', value: improveValue || '-', inline: false }
+    ],
+    timestamp: new Date().toISOString()
+  }]
+};
 
-        try {
-          // Send to Discord (use sendBeacon for reliability on redirect)
-          const blob = new Blob([JSON.stringify(discordPayload)], { type: 'application/json' });
-          if (navigator.sendBeacon) {
-            navigator.sendBeacon(webhookUrl, blob);
-          } else {
-            await fetch(webhookUrl, {
-              method: 'POST',
-              headers: { 'Content-Type': 'application/json' },
-              body: JSON.stringify(discordPayload)
-            });
-          }
+try {
+  const body = JSON.stringify(discordPayload);
 
-          // Small delay to help ensure the webhook request is sent before redirect
-          await new Promise(resolve => setTimeout(resolve, 300));
+  // 1) Try sendBeacon first (best for redirects)
+  let sent = false;
+  if (navigator.sendBeacon) {
+    sent = navigator.sendBeacon(
+      webhookUrl,
+      new Blob([body], { type: 'application/json' })
+    );
+  }
 
-          // Redirect to your thank you page
-          window.location.href = 'thankyou.html';
+  // 2) Fallback to fetch with keepalive (helps on redirect)
+  if (!sent) {
+    await fetch(webhookUrl, {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body,
+      keepalive: true
+    });
+  }
 
-        } catch (error) {
-          console.error('Error submitting survey:', error);
+  // Small delay to let the request leave the browser
+  await new Promise(r => setTimeout(r, 600));
+} catch (err) {
+  console.error('Discord webhook failed:', err);
+}
+
           // Still redirect even if Discord fails
           window.location.href = 'thankyou.html';
         }
@@ -427,3 +436,4 @@
   </script>
 </body>
 </html>
+
