--- a/lumnl/index.html
+++ b/lumnl/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Luminoir Enquête</title>
+  <title>Lumoira Enquête</title>
 
-  <!-- Shopify Enquête Formulier - Luminoir -->
+  <!-- Shopify Enquête Formulier - Lumoira -->
   <style>
     :root{
       --bg:#f3f4f6;
@@ -376,7 +376,7 @@
 
         // Open Trustpilot eerst (voor mobiele compatibiliteit)
         if (starRating >= 3) {
-          window.open('https://www.trustpilot.com/evaluate/luminoir.nl', '_blank');
+          window.open('https://www.trustpilot.com/evaluate/lumoira.co', '_blank');
         }
 
         // Verzend naar Discord (AANGEPASTE WEBHOOK)
@@ -384,7 +384,7 @@
 
         const discordPayload = {
           embeds: [{
-            title: '📋 Nieuwe Enquête Reactie - Luminoir',
+            title: '📋 Nieuwe Enquête Reactie - Lumoira',
             color: 3066993,
             fields: [
               { name: 'Q1. Naam', value: name, inline: false },
