--- a/lumit/index.html
+++ b/lumit/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Survey Luminoir</title>
+  <title>Survey Lumoira</title>
 
-  <!-- Modulo Survey Shopify - Luminoir -->
+  <!-- Modulo Survey Shopify - Lumoira -->
   <style>
     :root{
       --bg:#f3f4f6;
@@ -376,7 +376,7 @@
 
         // Apre Trustpilot PRIMA (per compatibilità mobile)
         if (starRating >= 3) {
-          window.open('https://www.trustpilot.com/evaluate/luminoir.nl', '_blank');
+          window.open('https://www.trustpilot.com/evaluate/lumoira.co', '_blank');
         }
 
         // Invia a Discord (WEBHOOK AGGIORNATO)
@@ -384,7 +384,7 @@
 
         const discordPayload = {
           embeds: [{
-            title: '📋 Nuova Risposta al Survey - Luminoir',
+            title: '📋 Nuova Risposta al Survey - Lumoira',
             color: 3066993,
             fields: [
               { name: 'Q1. Nome', value: name, inline: false },
